[developing]: finished implementing admin, fixed swagger
